--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.29.0
-pandas==2.1.4
-numpy==1.26.2
-plotly==5.18.0
-scikit-learn==1.3.2
-scipy==1.11.4
-openpyxl==3.1.2
+streamlit>=1.32.0
+pandas>=2.2.0
+numpy>=1.26.0
+plotly>=5.18.0
+scikit-learn>=1.4.0
+scipy>=1.12.0
